add navbar , home page and page 404

--- a/src/client/src/assets/css/root.css
+++ b/src/client/src/assets/css/root.css
@@ -14,6 +14,11 @@
     --beige: #e0ded2;
     --primary: 'Gilroy';
     --secondary: 'Proxima Nova';
+    --white: #fff;
+    --black: #000;
+    --grey: #808080;
+    --red : #CB0124;
+    --yellow : #EF7C00;
 }
 
 
