add navbar , home page and page 404

--- a/src/client/src/assets/css/import.css
+++ b/src/client/src/assets/css/import.css
@@ -3,4 +3,7 @@
 @import "tableau.css";
 @import "tableau.css";
 @import "filtrePage.css";
-@import "filtre.css"
+@import "filtre.css";
+@import "navbar.css";
+@import "home.css";
+@import "page404.css";
