--- a/src/client/src/assets/css/import.css
+++ b/src/client/src/assets/css/import.css
@@ -8,3 +8,5 @@
 @import "home.css";
 @import "AddingCarsForm.css";
 @import "AddingCarsPage.css";
+@import "registrationForm.css";
+@import "registerPage.css"
