--- a/src/client/src/assets/css/navbar.css
+++ b/src/client/src/assets/css/navbar.css
@@ -149,3 +149,21 @@ a.nav-link {
     margin-left: 5px; 
     cursor: pointer; 
   }
+
+  .logout-button{
+    color: var(--red);
+    text-decoration: none;
+    font-size: calc(0.5vw + 0.8rem);
+    font-family: initial;
+    margin: 10px;
+    white-space: nowrap;
+    border: 1px solid var(--red);
+    border-radius: 5px;
+    padding: 5px;
+    background-color: white;
+    
+    &:hover {
+        color: var(--white);
+        background-color: var(--red);
+    }
+  }
