--- a/src/client/src/assets/css/filtrePage.css
+++ b/src/client/src/assets/css/filtrePage.css
@@ -2,4 +2,7 @@
     display: flex;
     justify-content: space-between;
     padding-top:8%;
+    background-color: #f3faf7;
+    background-size: cover;
+    height: 100vh;
 }
