--- a/src/client/src/assets/css/import.css
+++ b/src/client/src/assets/css/import.css
@@ -9,4 +9,5 @@
 @import "AddingCarsForm.css";
 @import "AddingCarsPage.css";
 @import "registrationForm.css";
-@import "registerPage.css"
+@import "registerPage.css";
+@import "brandsTab.css";
