end with filtre

--- a/src/client/src/assets/css/tableau.css
+++ b/src/client/src/assets/css/tableau.css
@@ -3,3 +3,11 @@
     flex: left;
     padding-right: 3%;
 }
+
+.PaginationTable{
+   display: flex ;
+   align-items: center;
+   justify-content: center;
+   width: 100%;
+    padding-top: 1%;
+}
