add collaps to filter and add the number of cars field

--- a/src/client/src/assets/css/filtrePage.css
+++ b/src/client/src/assets/css/filtrePage.css
@@ -4,5 +4,6 @@
     padding-top:10%;
     background-color: #f3faf7;
     background-size: cover;
-    height: max-content;
+    min-height: 100vh;
+    height: 100%;
 }
