brands page + models page

--- a/src/client/src/assets/css/AddingCarsPage.css
+++ b/src/client/src/assets/css/AddingCarsPage.css
@@ -11,7 +11,7 @@
 }
 .adding-cars-page-img{
    margin: 10px;
-  
+    width: 250px;
 }
 .adding-cars-page-title{
     font-family: var(--primary) ;
