--- a/src/client/src/assets/css/modelsPage.css
+++ b/src/client/src/assets/css/modelsPage.css
@@ -1,76 +1,95 @@
-.brands-page-container{
+.models-page-container{
     background-color: #f3faf7;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding-top: 120px;
-    gap: 20px;
     min-height: 100vh;
+    padding-bottom: 20px;
+ 
 }
 
-.brands-page-title{
+.models-page-title{
     font-family: var(--primary) ;
     font-size: 2.5rem;
-    color: #EF7C00;
+    color: var(--red);
     text-align: center;
 }
 
-.brands-page-list{
+.models-page-list{
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    gap: 10px;
+    gap: 20px;
     flex-wrap: wrap;
     margin-top: 20px;
     width: 100%;
+    
 }
+.brand-models-container{
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 10px;   
+    border: 1px solid var(--red);
+    padding: 20px;
 
-.brands-page-item{
+}
+.models-page-item{
     background-color: white;
     display: flex;
     flex-direction: row;
    justify-content: space-between;
    padding: 15px;
     align-items: center;
-   width: 30%;
+    width: 100%;
    box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.5);
 }
-.brands-page-item-name{
+.brand-name{
+    font-family: var(--secondary);
+    font-size: 1.3rem;
+    font-weight: bolder;
+    color: var(--red);
+}
+.models-page-item-name{
     font-family: var(--secondary);
     font-size: 1.2rem;
     font-weight: bolder;
 }
-.brands-page-item-count{
+.models-page-item-count{
     font-family: var(--secondary);
     font-size: 1rem;
     font-weight: bolder;
     color: white;
-    background-color: #EF7C00;
+    background-color: var(--red);
     padding: 7px;
     border-radius: 50px;
     min-width: 50px;
     width: fit-content;
     text-align: center;
 }
-.brands-page-item:hover {
-    background-color: #EF7C00;
+.models-page-item:hover {
+    background-color: var(--red);
     color: white;
     transform: scale(1.1);
     transition: all 0.3s ease; 
 }
 
-.brands-page-item:hover .brands-page-item-count {
+.models-page-item:hover .models-page-item-count {
     background-color: white; 
-    color: #EF7C00;
+    color: var(--red);
 }
-.brands-page-subtitle{
+.models-page-subtitle{
     font-family: var(--secondary) ;
     margin-top: 50px;
     font-size: 1.8rem;
     text-align: center;
 }
-.adding-brand-container{
+.adding-model-container{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -78,39 +97,47 @@
     gap: 20px;
     width: 100%;
 }
-.adding-brand-form{
-   width: 50%;
+
+.adding-model-form{
+   width: 100%;
    display: flex;
    flex-direction: row ;
    justify-content: center ;
    align-items: start !important;
   gap: 10px;
 }
-.adding-brand-button{
+.adding-model-input-field{
+    width: 100% !important;
+}
+.adding-model-button{
     font-family: var(--secondary) !important;
-    font-size: 1rem !important;
-    background-color: #f47216    !important;
+    font-size: 0.8rem !important;
+    background-color: var(--red)!important;
     border-radius: 15px;
     border:none !important;
-    width: 20%
+    width: 30%;
+    height: 40px;
 }
 .brand-form-error-alert{
     width: 50%;
 }
 
 @media (max-width: 1000px) {
-    .adding-brand-form{
+    .adding-model-form{
         width: 100%;
         flex-direction: column;
         align-items: center;
     }
-    .adding-brand-button{
+    .adding-model-button{
         width: 100%;
     }
-    .brands-page-item{
+    .brand-models-container{
+        width: 100%;
+    }
+    .models-page-item{
         width: 80%;
     }
-    .brands-page-list{
+    .models-page-list{
         width: 100%;
     }
 }
