--- a/src/client/src/assets/css/import.css
+++ b/src/client/src/assets/css/import.css
@@ -12,4 +12,5 @@
 @import "registerPage.css";
 @import "brandsTab.css";
 @import "brandsPage.css";
-@import "modelsPage.css"
+@import "modelsPage.css";
+@import "statesPage.css";
