--- a/src/client/src/assets/css/navbar.css
+++ b/src/client/src/assets/css/navbar.css
@@ -65,6 +65,7 @@ a.nav-link {
   margin: 10px;
   max-width: 500px;
   height: auto;
+  width: auto;
 }
 .nav-normal-links-container{
     display: flex;
@@ -108,8 +109,8 @@ a.nav-link {
     display: inline-block;
   }
   .user-image {
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: auto;
     margin-right: 10px;
   }
   .dropdown-content-profile {
