--- a/src/client/src/assets/css/filtrePage.css
+++ b/src/client/src/assets/css/filtrePage.css
@@ -7,3 +7,36 @@
     min-height: 100vh;
     height: 100%;
 }
+.button-favorite{
+display: flex;
+align-items: center;
+font-size: 14px !important;
+background-color: transparent !important;
+color: red    !important;
+border: 1px solid red !important;
+font-family: var(--secondary) !important;
+
+}
+
+.button-favorite:hover{
+background-color: red !important;
+color: white !important;
+border: 1px solid red !important;
+}
+
+.button-not-favorite{
+display: flex;
+align-items: center;
+font-size: 14px !important;
+background-color: green !important;
+color: white    !important;
+border: 1px solid green !important;
+font-family: var(--secondary) !important;
+
+}
+
+.button-not-favorite:hover{
+background-color: transparent !important;
+color: green !important;
+border: 1px solid green !important;
+}
